cmake_minimum_required (VERSION 2.8)

set (COMPARE_SOURCES sparse_mia_compare_test.cpp)
add_executable(SparseMIACompareTests ${COMPARE_SOURCES})
set (FUNCTION_SOURCES sparse_mia_functions.cpp)
add_executable(SparseMIAFunctionTests ${FUNCTION_SOURCES})
set (ADD_SUB_SOURCES sparse_mia_add_sub_tests.cpp)
add_executable(SparseMIAAddSubtractTests ${ADD_SUB_SOURCES})
set (MULT_SOURCES sparse_mia_mult_test.cpp)
add_executable(SparseMIAMultTests ${MULT_SOURCES})
if(NOT MIA_USE_HEADER_ONLY_TESTS)
	 target_link_libraries(SparseMIACompareTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAFunctionTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAAddSubtractTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAMultTests ${Boost_LIBRARIES})
endif()
ADD_TEST(SparseMIACompareTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIACompareTests)
ADD_TEST(SparseMIAFunctionTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAFunctionTests)
ADD_TEST(SparseMIAAddSubtractTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAAddSubtractTests)
ADD_TEST(SparseMIAMultTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAMultTests)


