cmake_minimum_required (VERSION 2.8)

set (COMPARE_SOURCES sparse_mia_compare_test.cpp)
add_executable(SparseMIACompareTests ${COMPARE_SOURCES})
set (FUNCTION_SOURCES sparse_mia_functions.cpp)
add_executable(SparseMIAFunctionTests ${FUNCTION_SOURCES})
set (ADD_SUB_SOURCES sparse_mia_add_sub_tests.cpp)
add_executable(SparseMIAAddSubtractTests ${ADD_SUB_SOURCES})
set (MULT_SOURCES sparse_mia_mult_test.cpp)
add_executable(SparseMIAMultTests ${MULT_SOURCES})
set (ASSIGN_SOURCES sparse_mia_assign_test.cpp)
add_executable(SparseMIAAssignTests ${ASSIGN_SOURCES})
set (SOLVE_SOURCES sparse_mia_solve_test.cpp)
add_executable(SparseMIASolveTests ${SOLVE_SOURCES})
if(NOT MIA_USE_HEADER_ONLY_TESTS)
	 target_link_libraries(SparseMIACompareTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAFunctionTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAAddSubtractTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAAssignTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIAMultTests ${Boost_LIBRARIES})
	 target_link_libraries(SparseMIASolveTests ${Boost_LIBRARIES})
endif()
ADD_TEST(SparseMIACompareTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIACompareTests)
ADD_TEST(SparseMIAFunctionTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAFunctionTests)
ADD_TEST(SparseMIAAddSubtractTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAAddSubtractTests)
ADD_TEST(SparseMIAMultTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAMultTests)
ADD_TEST(SparseMIAAssignTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIAAssignTests)
ADD_TEST(SparseMIASolveTests ${CMAKE_CURRENT_BINARY_DIR}/SparseMIASolveTests)
